# elomax-desktop-v3

./: .env.example  .env.production  .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
desktop-v3/: package-lock.json
scripts/: convert-require.mjs  convert-scroll-area.mjs  generate-icon.html  release.mjs  rename-actions.mjs  strip-auto-imports.mjs  sync-ionicons.mjs
src/: App.vue  Subpanel.vue  components.d.ts  main.ts  modules.d.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: channels.rs  lcu.rs  lib.rs  main.rs
src/assets/styles/: default.scss
src/components/: AppMenuDrawer.vue  AppMenuTrigger.vue  ExtraIcon.vue  GameButton.vue  GameIcon.vue  Loading.vue  Login.vue  MiniLoading.vue  Modals.vue  MyServicesDropdown.vue  ServicesQueueDropdown.vue  Updates.vue
src/components/Buttons/: LeagueOfLegends.vue  WildRift.vue
src/config/: api.ts  assets.ts  extras.ts  game-svgs.ts  games.ts  pusher-channels.ts
src/dtos/: lol-account.ts  services.ts
src/plugins/: bridge-plugin.ts  bridge.ts  channels.ts  dayjs.ts  event-bus.ts  moment-compat.ts  pusher.ts  safe-html.ts  tippy-helpers.ts  toast.ts
src/router/: index.ts
src/services/: auth-api.ts
src/stores/: app.ts  auth.ts  compat.ts  lol.ts  notifications.ts  service-collection.ts  services-queue.ts  services.ts  settings.ts
src/views/: BlogArticles.vue  Home.vue  Settings.vue  Tools.vue
(+86 files in other folders)
