[package]
name = "elomax-desktop"
version = "0.0.4"
description = "ELOMAX Desktop"
authors = ["ELOMAX"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "elomax_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "native-tls"], default-features = false }
native-tls = { version = "0.2", features = ["vendored"] }
once_cell = "1"
parking_lot = "0.12"
base64 = "0.22"
notify = "6.1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
